<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_main_activity"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/main_title_gray"
        android:textSize="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:layout_width="23dp"
        android:layout_height="25dp"
        android:src="@drawable/drawable_icon_thunderbolt"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="158dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableLeft="@drawable/drawable_icon_email"
        android:hint="@string/main_email_edittext"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableLeft="@drawable/drawable_icon_password"
        android:hint="@string/main_password_editext"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/id_btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_btn_rounded"
        android:text="@string/main_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:icon="@android:drawable/ic_lock_idle_lock"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.1" />


    <LinearLayout
        android:id="@+id/et_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_btn_login"
        app:layout_constraintVertical_bias="0.12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/main_title_gray"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/sign_up_now_message"
            android:textColor="@color/main_signup_hyperlink"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_text_separate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_signup"
        app:layout_constraintVertical_bias="0.06">

        <View
            android:layout_width="137dp"
            android:layout_height="20dp"
            android:background="@drawable/drawable_line"
            android:textColor="@color/main_signup_hyperlink"
            android:textSize="15dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="OR"
            android:textColor="@color/main_title_gray"
            android:textSize="15dp" />

        <View
            android:layout_width="137dp"
            android:layout_height="20dp"
            android:background="@drawable/drawable_line"
            android:textColor="@color/main_signup_hyperlink"
            android:textSize="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/social_networks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_social_networks"
        android:textColor="@color/main_title_gray"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_text_separate"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_btn_rounded_facebook"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:icon="@drawable/drawable_icon_facebook"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/social_networks"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btn_google"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_btn_rounded_google"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:icon="@drawable/drawable_icon_google"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_facebook"
        app:layout_constraintTop_toBottomOf="@id/social_networks"
        app:layout_constraintVertical_bias="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>